# ToysMat

./: Field.hs  LICENSE  List.hs  Mat.hs  README.md  Vector.hs  mat.cabal  toys-mat.cabal
src/Toys/Mat/: Field.hs  List.hs  Mat.hs  Vector.hs
test/: MatSpec.hs  doctests.hs
