Name:                   toys-mat
Version:                1.0
Author:                 dagezi <dagezi@gmail.com>
Maintainer:             dagezi <dagezi@gmail.com>
License:                BSD3
License-File:           LICENSE
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:
      Toys.Mat.Field,
      Toys.Mat.Mat,
      Toys.Mat.Vector  
  
  Build-Depends:        base >= 4 && < 5

Test-Suite doctest
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  HS-Source-Dirs:       test
  Ghc-Options:          -threaded -Wall
  Main-Is:              doctests.hs
  Build-Depends:        base
                      , doctest >= 0.9.3
